fix: return snapshot from getBlockedProviders to prevent race on live map